# Underwater-Buoy-Detector

./: README.md
au_vision/: CMakeLists.txt  README.md  detector_nodelet.xml  package.xml  tracker_nodelet.xml
au_vision/include/au_vision/: arc_detector.h  bin_detector.h  camshift_tracker.h  detector.h  detector_action.h  naive_buoy_detector.h  surf_detector.h  test_detector.h  test_tracker.h  tracker.h  vision_bridge.h
au_vision/launch/: arc_detector.launch  bin_detector.launch  camshift_tracker_node.launch  camshift_tracker_nodelet.launch  naive_buoy_detector.launch  surf_detector_server.launch  test_detector_action_server.launch  test_detector_node.launch  test_detector_nodelet.launch  test_detector_service.launch  test_tracker_node.launch  test_tracker_nodelet.launch
au_vision/scripts/: mock_front_camera.py
au_vision/src/: arc_detector.cpp  bin_detector.cpp  camshift_tracker.cpp  detector.cpp  detector_action.cpp  detector_action_server.cpp  detector_node.cpp  detector_nodelet.cpp  detector_server.cpp  naive_buoy_detector.cpp  test_action_client.cpp  test_detector.cpp  test_tracker.cpp  tracker.cpp  tracker_node.cpp  tracker_nodelet.cpp  vision_bridge.cpp
au_vision/src/arc_detector/: curve_grow.c  ellipse_fit.c  elsdc.c  gauss.c  image.c  iterator.c  lapack_wrapper.c  misc.c  pgm.c  polygon.c  rectangle.c  ring.c  svg.c
au_vision/src/surf_detector/: surf_detector.cpp  surf_trainer.cpp
