<?xml version="1.0"?>
<package>
    <name>au_vision</name>
    <version>0.0.1</version>
    <description>The au_vision package</description>

    <maintainer email="scheideman@arvp.org">Sean Schideman</maintainer>

    <license>TODO</license>

    <author email="waqar@arvp.org">Rumman Waqar</author>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>nodelet</build_depend>
    <build_depend>cv_bridge</build_depend>
    <build_depend>image_transport</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>actionlib_msgs</build_depend>
    <build_depend>actionlib</build_depend>
    <build_depend>au_core</build_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>rospy</run_depend>
    <run_depend>nodelet</run_depend>
    <run_depend>cv_bridge</run_depend>
    <run_depend>image_transport</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>actionlib_msgs</run_depend>
    <run_depend>actionlib</run_depend>
    <run_depend>message_runtime</run_depend>
    <run_depend>au_core</run_depend>

    <export>
        <nodelet plugin="${prefix}/tracker_nodelet.xml" />
        <nodelet plugin="${prefix}/detector_nodelet.xml" />
    </export>
</package>
